[gd_scene load_steps=4 format=3 uid="uid://bydw23a0418p0"]

[ext_resource type="PackedScene" uid="uid://b8yk537s4b6ra" path="res://Scenes/bullet_indicator.tscn" id="1_cy6y5"]
[ext_resource type="Script" path="res://Scripts/bullet_source.gd" id="1_n00tw"]
[ext_resource type="PackedScene" uid="uid://hbvlptbylk14" path="res://Scenes/bullet.tscn" id="2_a4f5o"]

[node name="BulletSource" type="Node2D"]
script = ExtResource("1_n00tw")

[node name="BulletIndicator" parent="." instance=ExtResource("1_cy6y5")]

[node name="Bullet" parent="." instance=ExtResource("2_a4f5o")]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[connection signal="bullet_finished" from="Bullet" to="." method="_on_bullet_bullet_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
